<resources>
    <string name="pregunta_aumentar_deuda">¿Cuánto aumenta la deuda?</string>
    <string name="pregunta_aumentar_derecho_cobro">¿Cuánto aumenta el derecho de cobro?</string>
    <string name="pregunta_descontar_deuda">¿Cuánto quieres descontar de esta deuda?</string>
    <string name="pregunta_descontar_derecho_cobro">¿Cuánto quieres descontar de este derecho de cobro?</string>
    <string name="pregunta_cancelar_deuda">¿Seguro que quieres cancelar esta deuda?</string>
    <string name="pregunta_cancelar_derecho_cobro">¿Seguro que quieres cancelar este derecho de cobro?</string>
    <string name="pregunta_cancelar_todas">¿Seguro que quieres cancelar todas las deudas contraídas con esta persona?</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="cancelar">Cancelar</string>
    <string name="aumentar">Aumentar</string>
    <string name="disminuir">Disminuir</string>
    <string name="cancelar_deuda">Cancelar deuda</string>
    <string name="cancelar_todas">Cancelar todas las deudas</string>
    <string name="mensaje_cantidad_no_valida">No has escrito una cantidad válida</string>
    <string name="mensaje_disminucion_excesiva">No puedes descontar más de la cantidad debida</string>
    <string name="moneda_por_defecto">€</string>
    <string name="concepto">Concepto</string>
    <string name="acreedor">Acreedor</string>
    <string name="conceptos_y_cantidades">Conceptos y cantidades</string>
    <string name="crear">Crear</string>
    <string name="eliminar_deuda">Eliminar deuda</string>
    <string name="eliminar_deudas">Eliminar deudas</string>
    <string name="eliminar_persona">Eliminar persona</string>
    <string name="ver_deuda">Ver deuda</string>
    <string name="aumentar_deuda">Aumentar deuda</string>
    <string name="descontar_deuda">Descontar de la deuda</string>
    <string name="cancelada">CANCELADA</string>
    <string name="personas">Personas</string>
    <string name="nuevo_concepto">Nuevo concepto</string>
    <string name="nueva_deuda">Nueva deuda</string>
    <string name="nuevo_derecho_de_cobro">Nuevo derecho de cobro</string>
    <string name="nueva_persona">Nueva persona</string>
    <string name="entidades_vacio">Añade una deuda seleccionando NUEVA DEUDA o NUEVO DERECHO DE COBRO</string>
    <string name="personas_vacio">Añade una persona seleccionando NUEVA PERSONA</string>
    <string name="nombre">Nombre</string>
    <string name="anadir_deuda">Añadir deuda</string>
    <string name="faltan_datos">Faltan datos por especificar</string>
    <string name="imposible_borrar_deudas">No se han podido borrar las deudas</string>
    <string name="aumentar_derecho_cobro">Aumentar derecho de cobro</string>
    <string name="descontar_derecho_cobro">Descontar del derecho de cobro</string>
    <string name="cancelar_derecho_cobro">Cancelar el derecho de cobro</string>
    <string name="anadir_derecho_cobro">Añadir derecho de cobro</string>
    <string name="anadir">Añadir</string>
    <string name="imposible_eliminar_deudas">No se ha podido eliminar las deudas de %1$s. Prueba más tarde.</string>
    <string name="imposible_eliminar_persona">No se ha podido eliminar a %1$s. Prueba más tarde.</string>
    <string name="mensaje_vacio">Aún no hay ninguna deuda. Añade una pulsando \"Añadir deuda\" aquí abajo o en la barra superior.</string>
    <string name="deudas_canceladas">DEUDAS CANCELADAS</string>
    <string name="debes_un_total_de">Debes un total de</string>
    <string name="te_deben_un_total_de">Te deben un total de</string>
    <string name="cuenta_a_deber">La cuenta te sale a deber</string>
    <string name="cuenta_a_cobrar">La cuenta te sale a cobrar</string>
    <string name="puedes_cancelar_deuda">Puedes cancelar la deuda</string>
    <string name="anadir_imagen">Añadir imagen</string>
    <string name="borrar_imagen">Borrar imagen</string>
    <string name="cambiar_nombre">Cambiar nombre</string>
    <string name="cambiar">Cambiar</string>
    <string name="mensaje_dialogo_cambiar_nombre">Introduce un nuevo nombre para %1$s:</string>
    <string name="mensaje_dialogo_cambiar_concepto">Ya ha una deuda para el día de hoy con el concepto \"%1$s\". Debes especificar un nobre nuevo para copiar la deuda:</string>
    <string name="total_debido">Total debido</string>
    <string name="total_adeudado">Total adeudado</string>
    <string name="deseleccionar_todo">Deseleccionar todo</string>
    <string name="sseleccionar_todo">Seleccionar todo</string>
    <string name="cantidad_no_numerica">La cantidad tiene que ser un número</string>
    <string name="cantidad_vacia">La cantidad no puede quedarse vacía</string>
    <string name="concepto_vacio">El concepto no puede quedarse vacío</string>
    <string name="deuda_modificada">La deuda se ha modificado</string>
    <string name="problema_guardar_deuda">Se ha producido un problema al guardar la deuda</string>
    <string name="fecha_deuda">Fecha de la deuda</string>
    <string name="datepicker_dialog_mensaje">¿Cuándo se contrajo la deuda?</string>
    <string name="nombre_repetido">%1$s ya tiene una deuda con el concepto %2$s, contraída el %3$s</string>
    <string name="deudas_repetidas">Deudas repetidas</string>
    <string name="deuda_repetida">Deuda repetida</string>
    <string name="aceptar">Aceptar</string>
    <string name="ya_tiene_una_deuda">%1$s ya tiene una deuda con el concepto \"%2$s\"</string>
    <string name="ya_tiene_varias_deudas">%1$s ya tiene deudas con estos conceptos:\n\n"</string>
    <string name="confirmar_eliminar_personas">¿Seguro que quieres eliminar estas personas?</string>
    <string name="confirmar_eliminar_persona">¿Seguro que quieres eliminar esta persona?</string>
    <string name="eliminar">Eliminar</string>
    <string name="escribe_un_nombre">Escribe un nombre</string>
    <string name="nombre_cambiado">Nombre cambiado</string>
    <string name="persona_repetida">Ya existe una persona con este mismo nombre</string>
    <string name="undo_deleting_debt">¿Quieres deshacer esta acción?</string>
    <string name="undo">DESHACER</string>
    <string name="cannot_update_person">No se ha podido actualizar la persona.</string>
    <string name="total_seleccionado">Total seleccionado</string>
    <string name="cantidad_deuda_vacía">0</string>
    <string name="deuda_grupal_explicacion">Al marcar un concepto como \"deuda grupal\" su cantidad será divida entre todos los deudores especificados.</string>
    <string name="no_mostrar_dialogo">No volver a mostar este diálogo</string>
    <string name="entendido">Entendido</string>
    <string name="entendido_enfatico">¡Entendido!</string>
    <string name="deuda_grupal">Deuda grupal</string>
    <string name="imposible_borrar_foto">No se ha podido eliminar la foto.</string>
    <string name="balance_total">Balance total</string>
    <string name="slash">/</string>
    <string name="both_total">Total ambos</string>
    <string name="total">Total</string>
    <string name="selecciona_una_imagen">Selecciona una imagen…</string>
    <string name="imposible_obtener_foto">No se ha podido obtener la foto correctamente.</string>
    <string name="primera_deuda_contraida">"Primera deuda contraída el "</string>
    <string name="mensaje_dialog_permisos">DeudApp puede utilizar sus contactos para mostrar sugerencias de autocompletado al crear una nueva persona. Sin este permiso, esta opción no estará habilitada. ¿Seguro que prefiere denegar este permiso?\n\nLea nuestra sencilla Política de privacidad.</string>
    <string name="url_politica_privacidad" formatted="false">https://github.com/MelerosPaw/DeudApp/blob/master/README.md</string>
    <string name="dialog__infinite_amount_title">Cantidad infinita</string>
    <string name="dialog__infinite_amount_message">La cantidad que has introducido no puede representarse, por lo que se considera infinita y, sinceramente, no creemos que quieras anotar una cantidad infinita. Le sumes lo que le sumes, le restes lo que le restes, seguirá siendo infinita, y nadie tiene infinito dinero. Y si lo tienes, por favor, llámanos.\n\n¿Estás seguro de que quieres tener una deuda infinita?</string>
    <string name="dialog__typed_infinite_amount_message">La cantidad que quieres %1$s no puede representarse, por lo que se considera infinita y, sinceramente, no creemos que quieras anotar una cantidad infinita. Le sumes lo que le sumes, le restes lo que le restes, seguirá siendo infinita, y nadie tiene infinito dinero. Y si lo tienes, por favor, llámanos.\n\n¿Estás seguro de que quieres tener una deuda infinita?</string>
    <string name="dialog__adding_result_is_infinite_message">La cantidad que resulta de aumentar la deuda no puede representarse, por lo que se considera infinita y, sinceramente, no creemos que quieras anotar una cantidad infinita. Le sumes lo que le sumes, le restes lo que le restes, seguirá siendo infinita, y nadie tiene infinito dinero. Y si lo tienes, por favor, llámanos.\n\n¿Estás seguro de que quieres tener una deuda infinita?</string>
    <string name="useless_operation_title">Operación inutil</string>
    <string name="useless_operation_message">Esta operación es inútil ya que el resultado seguirá siendo infinito.</string>
    <string name="i_know">Lo sé</string>
    <string name="delete_person">Eliminar persona</string>
    <string name="delete">Eliminar</string>
    <string name="add_debt">Añadir deuda</string>
    <string name="person_without_debts">Esta persona no tiene deudas.</string>
    <string name="person_deleted">Persona eliminada</string>
    <string name="edit">Editar</string>
    <string name="duplicate_debt">Duplicar deuda</string>
    <string name="duplicate">Duplicar</string>
    <string name="escribe_un_concepto">Escribe un concepto</string>
    <string name="concepto_repetido">%1$s ya tiene una deuda con el concepto %2$s</string>
    <string name="nombre_sin_modificar">No has modificado el %1$s</string>
    <string name="sin_cambios">No has cambiado nada</string>
    <string name="cambiar_fecha">Cambiar fecha</string>
    <string name="cambiar_imagen">Cambiar imagen</string>
    <string name="indicaciones_izquierda">Desliza un concepto\nhacia la izquierda\npara eliminarlo</string>
    <string name="indicaciones_derecha">Desliza un concepto\nhacia la derecha\npara duplicarlo</string>
    <string name="no_volver_a_mostrar">¡Ya no se me olvida!</string>

    <!-- Config -->
    <string name="config">Configuración</string>
    <string name="clave_preferencia_moneda">CURRENCY</string>
    <string name="moneda">Moneda</string>
    <string name="resumen_preferencia_moneda">Tipo de moneda que quieres utilizar</string>
    <string name="cero">0</string>

</resources>
