<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/nueva"
        android:orderInCategory="0"
        android:title="@string/nueva_deuda"
        app:showAsAction="never" />

    <item
        android:id="@+id/imagen"
        android:icon="@android:drawable/ic_menu_gallery"
        android:orderInCategory="1"
        android:title="@string/anadir_imagen"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/cancelar_todas"
        android:orderInCategory="2"
        android:title="@string/cancelar_todas"
        app:showAsAction="never" />

    <item
        android:id="@+id/borrar_imagen"
        android:orderInCategory="3"
        android:title="@string/borrar_imagen"
        app:showAsAction="never" />

</menu>
