<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:id="@+id/root"
    android:padding="5dp">

    <EditText
        android:id="@+id/et_concepto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/concepto"
        android:imeOptions="actionNext"
        android:inputType="textCapSentences"
        android:maxLines="1"
        android:nextFocusRight="@id/etCantidad"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etCantidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:digits="1234567890,."
        android:ems="6"
        android:gravity="end"
        android:hint="@string/cantidad_deuda_vacía"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_moneda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="end"
        android:text="@string/moneda_por_defecto"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/chk_deuda_grupal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:button="@drawable/selector_check_deuda_grupal"
        tools:checked="true"
        android:padding="5dp"/>

</LinearLayout>