<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="14dp"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="Título" />

    <TextView
        android:id="@+id/tv_mensaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        tools:text="Mensaje" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/llCurrencyRoot"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_cantidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:layout_marginRight="6dp"
            android:digits="1234567890,."
            android:ems="4"
            android:hint="0"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_moneda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moneda_por_defecto"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="end">

        <TextView
            android:id="@+id/tv_cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:text="@string/cancelar" />

        <TextView
            android:id="@+id/tv_guardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:text="@string/aumentar" />

    </LinearLayout>

</LinearLayout>
