<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="14dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:text="@string/cambiar_nombre"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_mensaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:text="Introduce un nuevo nombre para Juan Luis:" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:gravity="center"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                tools:text="Antonio" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/cancelar"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_guardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/cambiar"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/fl_loading_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_white"
        android:visibility="invisible"
        android:clickable="true">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </FrameLayout>

</FrameLayout>

