<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fl_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvFecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:drawablePadding="10dp"
                    android:paddingStart="5dp"
                    android:paddingLeft="5dp"
                    android:paddingTop="2dp"
                    android:paddingEnd="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="2dp"
                    android:textColor="@android:color/white"
                    tools:text="12/05/2015" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <EditText
                        android:id="@+id/etConcepto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/concepto"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textSize="@dimen/text_size_detalle_entidad"
                        android:textStyle="bold"
                        tools:text="Concepto" />

                    <LinearLayout
                        android:id="@+id/ll_currency_root"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/et_cantidad"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:digits="1234567890.,"
                            android:ems="5"
                            android:gravity="end"
                            android:inputType="numberDecimal"
                            android:lines="1"
                            android:maxLines="1"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="20sp"
                            tools:text="350,25" />

                        <TextView
                            android:id="@+id/tvMoneda"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="20sp"
                            tools:text=" €" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_cambiar_fecha"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:drawableStart="@drawable/ic_fecha_gris"
                        android:drawableLeft="@drawable/ic_fecha_gris"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:text="@string/cambiar_fecha"
                        android:textColor="@color/colorPrimary" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCancelar"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/cancelar"
                    android:textColor="@color/colorAccent" />

                <Button
                    android:id="@+id/btnGuardar"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/cambiar"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>
